formatting, data cleaner edits

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ aux_links:
 
 heading_anchors: true
 
-footer_content: "Copyright &copy; 2020."
+footer_content: "Copyright &copy; 2020 The Plea Justice Project."
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
