--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: pleajustice.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The Plea Justice project offers an interactive simulation of the plea bargaining
+  process as an alternative to existing research paradigms.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -31,7 +30,7 @@ kramdown:
 search_enabled: true
 aux_links:
   "Live Demo":
-    - "//demo2.pleajustice.org"
+    - "//demo.pleajustice.org"
   "Researcher Console":
     - "//researcher.pleajustice.org"
   "Plea-Justice on GitHub":
